<resources>
    <string name="app_name">MyQuizApp</string>
    <string name="category_label">Category:</string>
    <string name="category_name">Category Name</string>
    <string name="user_high_score_label">Your high score</string>
    <string name="global_high_score_label">Global high score</string>
    <string name="default_web_client_id">213505988047-60is1v76m78dle0sepc642u2uqm1rqb5.apps.googleusercontent.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="your_top_scores">Your top scores</string>
    <string name="date_obtained">Date obtained</string>
    <string name="score">Score</string>
    <string name="image_for_picture_round">Image for picture round</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="category_prompt">Choose a category</string>
    <string name="quiz_app">Quiz App</string>
    <string name="refresh_widget">Refresh</string>
    <string name="widget_config_prompt">Please select either a detailed or simple widget</string>
    <string name="main_notification_channel_name">Primary</string>
    <string name="select_quiz_image_content">Image view telling user to select a quiz</string>
    <string name="picture_text_view_dummy_text">Where is this?</string>
    <string name="results_text_view_dummy_text">Your score appears here</string>
    <string name="return_button_text_results">Return to main page</string>
    <string name="if_top_score_dummy_text">Describes if achieved top score</string>
    <string name="your_score_image_label_content">Image label for your score on results page</string>
    <string name="results_image_view_content">Results image view label</string>
    <string name="top_scores_instructions">Click any of these quiz rounds to see the top score EVER obtained for this quiz</string>
    <string name="image_global_content_desc">Image label for top score on global page</string>
    <string name="challenge_text_global_scores">Think you could beat this score?</string>
    <string name="question_activity_button_text_global">Try to beat it now!</string>
    <string name="button_text_global_return_main">Return to main screen</string>
    <string name="dummy_date_text_global">on the 12th March</string>
    <string name="dummy_user_text_global">was set by Bob Smith</string>
    <string name="dummy_score_text_global">84</string>
    <string name="dummy_text_quiz_name_main_recycler">Quiz title here</string>
    <string name="cannot_get_data_widget_text">No data</string>
    <string name="refresh_widget_icon">Refresh widget icon</string>
    <string name="dummy_text_widget_item">Category and score</string>
    <string name="dummy_text_high_score_date">Date</string>
    <string name="results_summary_title">Summary of your answers</string>
    <string name="correct_answer_results_label">Correct Answer:</string>
    <string name="your_answer_results_label">Your Answer:</string>
    <string name="settings">Settings</string>

    <string-array name="category_arrays">
        <item>TV</item>
        <item>Nature</item>
        <item>Music</item>
        <item>Films</item>
        <item>Technology</item>
        <item>History</item>
        <item>Sport</item>
        <item>Geography</item>
        <item>People</item>
        <item>Pictures</item>

    </string-array>
    <string-array name="spinner_array">
        <item>Simple</item>
        <item>Detailed</item>


    </string-array>

    <string-array name="sounds_array">
        <item>Off</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>

    </string-array>
</resources>
