<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="105dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/CategoryScoresNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/category_name"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userScoresHighScoreLabelTextView"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="16dp"
            android:text="@string/user_high_score_label"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/descriptionTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CategoryScoresNameTextView" />

        <TextView
            android:id="@+id/dateHighScoreLabelTextView"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/date_obtained"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:textColor="@color/descriptionTextColor"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/userScoresHighScoreLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/CategoryScoresNameTextView" />

        <TextView
            android:id="@+id/userScoresHighScoreValueTextView"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginStart="44dp"
            android:text="@string/score"
            android:visibility="invisible"
            android:textAlignment="center"
            android:textColor="@color/descriptionTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userScoresHighScoreLabelTextView" />

        <TextView
            android:id="@+id/dateHighScoreValueTextView"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:text="Score"
            android:textColor="@color/descriptionTextColor"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/userScoresHighScoreValueTextView"
            app:layout_constraintTop_toBottomOf="@+id/dateHighScoreLabelTextView" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>