<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="395dp"
    android:layout_height="105dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="395dp"
        android:layout_height="105dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/categoryLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:text="@string/category_label"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/CategoryNameTextView"
            android:layout_width="273dp"
            android:layout_height="34dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/categoryLabelTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/categoryLabelTextView" />

        <TextView
            android:id="@+id/userHighScoreLabelTextView"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:text="@string/user_high_score_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryLabelTextView" />

        <TextView
            android:id="@+id/globalHighScoreLabelTextView"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/global_high_score_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/userHighScoreLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/categoryLabelTextView" />

        <TextView
            android:id="@+id/userHighScoreValueTextView"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginStart="44dp"
            android:text="Score"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userHighScoreLabelTextView" />

        <TextView
            android:id="@+id/globalHighScoreValueTextView"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="Score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/userHighScoreValueTextView"
            app:layout_constraintTop_toBottomOf="@+id/globalHighScoreLabelTextView" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>